<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/signup_layout_padding_top"
                    android:paddingLeft="@dimen/signup_layout_padding_left"
                    android:paddingRight="@dimen/signup_layout_padding_right">

                <ImageView android:src="@drawable/icon_map_vector"
                           android:layout_width="wrap_content"
                           android:layout_height="@dimen/signup_app_icon_height"
                           android:layout_marginBottom="@dimen/signup_app_icon_margin_bottom"
                           android:layout_gravity="center_horizontal"/>

                <!-- Name Label -->
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/signup_input_margin_top"
                        android:layout_marginBottom="@dimen/signup_input_margin_bottom">
                    <EditText android:id="@+id/input_name"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textPersonName"
                              android:hint="@string/hint_user_name"/>
                </com.google.android.material.textfield.TextInputLayout>


                <!--  Email Label -->
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/signup_input_margin_top"
                        android:layout_marginBottom="@dimen/signup_input_margin_bottom">
                <EditText android:id="@+id/input_email"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textEmailAddress"
                              android:hint="@string/hint_email"/>
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rl_layout_country_selected"
                        android:layout_marginTop="@dimen/signup_input_margin_top"
                        android:layout_marginBottom="@dimen/signup_input_margin_bottom">

                <ImageView
                            android:id="@+id/imageview_country_icon"
                            android:layout_width="@dimen/country_icon_width"
                            android:layout_height="@dimen/country_icon_height"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:scaleType="centerInside"/>

                    <TextView
                            android:id="@+id/textview_selected_country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/country_text_margin_start"
                            android:layout_marginLeft="@dimen/country_text_margin_left"
                            android:layout_marginEnd="?android:listPreferredItemPaddingEnd"
                            android:layout_marginRight="?android:listPreferredItemPaddingRight"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                </RelativeLayout>

                <!-- Password Label -->
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/signup_input_margin_top"
                        android:layout_marginBottom="@dimen/signup_input_margin_bottom">
                    <EditText android:id="@+id/input_password"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textPassword"
                              android:hint="@string/hint_password"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Re-enter Label -->
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/signup_input_margin_top"
                        android:layout_marginBottom="@dimen/signup_input_margin_bottom">
                    <EditText android:id="@+id/input_reEnterPassword"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textPassword"
                              android:hint="@string/hint_re_password"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Signup Button -->
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bottom_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/signup_button_margin_top"
                        android:layout_marginBottom="@dimen/signup_button_margin_bottom"
                        android:padding="@dimen/signup_button_padding"
                        android:text="@string/create_account"/>

                <TextView android:id="@+id/textview_link_login"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginBottom="@dimen/signup_button_margin_bottom"
                          android:text="@string/label_already_member"
                          android:gravity="center"
                          android:textSize="@dimen/already_account_label_text_size"/>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>